# Project-RIC

./: .gitignore  BaseMotor.py  CMakeLists.txt  Calibrate.cpp  EN  IMU_vs_ML.txt  README.md  camera.py  camera_low.py  cppTest.cpp  dataCollection.py  encoderInput.c  inputs.txt  main.cpp  main.py  model.py  motorControl.c  motorFollow.c  runAndSendIMU.cpp  runTests.c  runTests2.c  runTestsMulti.c  setupPendulum.py  singleTest.c  speeds.txt  sysIDtest.c  timingTest.c  turnOff.c  ultimateTest.cpp
Arduino/stepper_motor_demo/: stepper_motor_demo.ino
CAD/: Bottenplatta v15.f3d
IMU/: CMakeLists.txt  IMU  IMU.c  IMU.ino  IMU.py  IMUdmp.cpp  IMUlib.cpp  IMUtest  MPU6050.h  call_IMU.c  call_IMU.h
Kalman/: CMakeLists.txt
LasseKanInteKoda/: shit.py  shitty.ino
ML/: IMU_vs_CAM.py  aarch64_inf.py  analyze.py  dataloader.pth  dataset.py  deadline.txt  generate_sample_npy.py  infer_models.py  inference.py  live_camera_inference.py  model.py  model.py.ipynb  orderData.py  preprocessing.py  tflite_conversion.py  timingTest.py
ML/.ipynb_checkpoints/: model.py-checkpoint.ipynb
ML/Data/: reformat.py
ML/Data/BigDataset/: label.json  labels.txt
ML/Data/Dataloaders/: test_loader.pth  train_loader.pth  val_loader.pth
ML/Data/SmallDataset/: labels.txt  refactor_filenames.py
ML/Results/LinearModel/: test_results.txt
ML/Results/MobileNetV2/: test_results.txt
ML/Results/runID12/: run.txt
ML/Results/runID13/: run.txt
ML/Results/runID14/: run.txt
ML/Results/runID15/: run.txt
MotorDriver/: CMakeLists.txt  motorControl.c  motorControl.h  pidMotor.c  pidMotor.h
SharedMem/: ReadFloat.cpp  UpdateFloat.py
Simulink/: Setup_parameters.m  Simulation.mdl  Simulation.slxc  SimulationIA.mdl  SimulationIA.slxc
Simulink/slprj/sim/varcache/Simulation/: checksumOfCache.mat  varInfo.mat
Simulink/slprj/sim/varcache/Simulation/tmwinternal/: simulink_cache.xml
Simulink/slprj/sim/varcache/SimulationIA/: checksumOfCache.mat  varInfo.mat
Simulink/slprj/sim/varcache/SimulationIA/tmwinternal/: simulink_cache.xml
actuation/: BaseMotor.py  base_camera.py  camera.py  camera_low.py  dataCollection.py  driveUpload.py  listener.py  move_motor.py  processImage.py  sendSteps.py  serial.py
perception/: camera.py  observe.py
